Im Verifier den --alg aus dem ProtectedHeader entnehme + Doku